--- a/install/centrifugo/config/config.json
+++ b/install/centrifugo/config/config.json
@@ -1,7 +1,7 @@
 {
   "v3_use_offset": true,
   "token_hmac_secret_key": "94375620-0f51-4a67-9836-82a067593bc9",
-  "admin_password": "strack",
+  "admin_password": "strack666666",
   "admin_secret": "265fcc06-d9d9-4992-9ec7-d38514228bb0",
   "api_key": "f7b1179f-7c23-48fe-a7e1-2d471fa501ad",
   "secret": "16bfd798-4f9f-4362-98e8-d88cb4997db2",
