--- a/install/strack/config/.env
+++ b/install/strack/config/.env
@@ -20,7 +20,7 @@ redis_port="6379"
 redis_password="strack"
 redis_select=9
 
-status=development
+status="development"
 
 WS_HOST="http://centrifugo:8000/api"
 WS_CONNECT_URL="ws://10.168.30.17:19803/connection/websocket"
