--- a/install/strack/config/.env
+++ b/install/strack/config/.env
@@ -22,6 +22,11 @@ redis_select=9
 
 status="development"
 
+media_request_url="http://10.168.30.17:19802/"
+media_upload_url="http://10.168.30.17:19802/media/upload"
+media_access_key="448c93c47bb503b758421ee74cb25b33"
+media_secret_key="e8d4f937b77c0a343bbba34c5276b395"
+
 WS_HOST="http://centrifugo:8000/api"
 WS_CONNECT_URL="ws://10.168.30.17:19803/connection/websocket"
 WS_KEY="f7b1179f-7c23-48fe-a7e1-2d471fa501ad"
