--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       - /etc/supervisor/conf.d/supervisord.conf
     volumes:
       - ./install/waitfor/wait-for-it.sh:/usr/local/bin/wait-for-it.sh
-      - ./install/strack/core:/var/www
+      - ./install/strack/core/strack-main:/var/www
     networks:
       strack:
 networks:
